<resources>
    <string name="app_name">News Everyday</string>
    <string name="banner_text">BE IN SYNC WITH LATEST NEWS</string>
    <string name="skip_login">Skip Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="content_authority">com.example.sony.newseveryday</string>
    <string name="facebook_app_id">743951782438832</string>
    <string name="no_widget_data">No Data </string>
    <string name="widget_string_url">url</string>
    <string name="section_world">World</string>
    <string name="section_tech">Technology</string>
    <string name="section_sports">Sports</string>
    <string name="section_bussiness">Bussiness</string>
    <string name="section_entertainment">Entertainment</string>
    <string name="section_save">Saved News</string>
    <string name="login">Login</string>
    <string name="logout">Signout</string>
    <string name="account">Account</string>
    <string name="email">email</string>
    <string name="user_name">name</string>
    <string name="photo_url">photoUrl</string>
    <string name="load_more_intent">More</string>
    <string name="tech_container_link_part">ars-technica</string>
    <string name="world_container_link_part">google-news</string>
    <string name="sports_container_link_part">bbc-sport</string>
    <string name="buss_container_link_part">bloomberg</string>
    <string name="ent_container_link_part">buzzfeed</string>
    <string name="news_to_webview">newsDetails</string>
    <string name="no_connectivity">No Internet Connection</string>
    <string name="no_bookmarks">No Saved News</string>
    <string name="saved">Saved</string>
    <string name="save">Save</string>
    <string name="unsave">UnSave</string>
    <string name="share">share</string>
    <string name="guest">Guest User</string>
    <string name="or">OR</string>
    <string name="about">About Us</string>
    <string name="about_content">NewsEveryday has been develeoped with an aim to keep everyone updated about the Top
    news of the all categories (World,technology,sports,bussiness,entertainment)
    </string>
    <string name="google_request_token">1035525148544-sjh1ju388kh6o6ur8dkrmp83mdobobfq.apps.googleusercontent.com</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="google_play_error">Google Play Services error.</string>
    <string name="alert_dlg_sign">Logging In</string>
    <string name="alert_dlg_guest">Getting In</string>
    <string name="removed_news">Removed from saved news</string>
    <string name="article_saved">Article Saved</string>


</resources>
