<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_world"
            android:title="@string/section_world" />
        <item
            android:id="@+id/nav_technology"
            android:title="@string/section_tech" />

        <item
            android:id="@+id/nav_sports"
            android:title="@string/section_sports" />
        <item
            android:id="@+id/nav_bussiness"
            android:title="@string/section_bussiness" />
        <item
            android:id="@+id/nav_enterntainment"
            android:title="@string/section_entertainment" />

        <item
            android:id="@+id/nav_saved"
            android:title="@string/section_save" />

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/signout"
                android:title="@string/logout"
                android:visible="false" />
            <item
                android:id="@+id/login"
                android:title="@string/login"
                android:visible="false" />
        </menu>
    </item>

</menu>
