<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banner_text"
            android:padding="3dp"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fb_margin_top"
                android:paddingTop="@dimen/fb_padding_vertical"
                android:paddingBottom="@dimen/fb_padding_vertical"
                android:layout_marginRight="@dimen/fb_padding_horizontal"
                android:layout_marginLeft="@dimen/fb_padding_horizontal" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/google_padding_vertical"
                android:layout_marginLeft="@dimen/google_padding_vertical"
                android:paddingBottom="5dp"

                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/or"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_login"
            android:onClick="skipLogin"
            android:background="@android:color/transparent" />
    </LinearLayout>
</LinearLayout>